--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
     "@apollo/react-hooks": "^4.0.0",
     "@heroicons/react": "2.0.18",
     "@material-tailwind/react": "2.1.4",
-    "apexcharts": "3.44.0",
+    "apexcharts": "^3.45.2",
     "date-fns": "^2.30.0",
     "graphql": "^16.8.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.1",
-    "jwt-decode": "^4.0.0",
+    "jwt-decode": "^3.1.2",
     "prop-types": "15.8.1",
     "react": "18.2.0",
-    "react-apexcharts": "1.4.1",
+    "react-apexcharts": "^1.4.1",
+    "react-csv": "^2.2.2",
     "react-day-picker": "^8.9.1",
     "react-dom": "18.2.0",
     "react-router-dom": "6.17.0"
